2006-09-18  Christian Stimming  <stimming@tuhh.de>

	* src/engine/binreloc.[hc], src/engine/gnc-path.c,
	src/bin/gnucash-bin.c, configure.in: Implement automatic
	relocation of previously compiled-in paths. With the exception of
	the env variables in src/bin/gnucash, we're fully relocatable now.

2006-09-13  Christian Stimming <stimming@tuhh.de>

	* src/import-export/hbci/gnc-plugin-hbci.c: Move the MT940
	importer action from the mt940 into the hbci plugin because in the
	hbci plugin everything is already there. From now on, MT940
	importing is available as soon as --enable-hbci is switched
	on. The mt940 plugin can be removed from SVN now.

2006-09-07  Christian Stimming  <stimming@tuhh.de>

	* src/engine/gnc-path.h, gnc-path.c: Add new file with utility
	functions to retrieve the needed directory paths. All compile-time
	vs. runtime path lookups will be implemented exactly in this file.

2006-09-07  David Hampton  <hampton@employees.org>

	* src/backend/postgres: Include config.h a couple of places.

	* src/engine/gnc-budget.c: Use the glib-compat.h file for backward
	compatible function names.

2006-09-03  Christian Stimming  <stimming@tuhh.de>

	* lib/libqof/qof/qofbackend.h, src/gnome-utils/gnc-file.c,
	src/backend/file/gnc-backend-file.c: If the file type wasn't
	recognized, check whether this failed because of no read
	permission and give appropriate user feedback.

	* src/backend/file/gnc-backend-file.c: Fix error checking for
	non-existing filenames. Will now always give a "file not found"
	message on nonexisting paths or filenames. #351351.

2006-08-20  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-account-xml-v2.c:
	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/gnome/top-level.c: Remove some conditional code that is no
	longer compiled, or shouldn't be compiled in 2.2.

	* src/gnome/gnc-plugin-page-account-tree.c: Maintain the account
	hierarchy when reparenting the descendants of a deleted account.
